src/app/cloud/[team-slug]/[project-slug]/(tabs)/(overview)/infraOnline/index.module.scss
@use '@scss/common.scss' as *;

.reTriggerBackground {
  display: flex;
  gap: calc(var(--base) * 1.5);

  @include small-break {
    gap: var(--base);
    flex-direction: column-reverse;
  }
}

.deployDetails {
  display: flex;
  flex-direction: column;
  gap: calc(var(--base) * .5);
  justify-content: center;

  p {
    margin: 0;
  }

  .iconAndLabel {
    @include small;
    display: flex;
    align-items: center;
    color: var(--theme-elevation-500);
    gap: calc(var(--base) * 0.5);

    svg {
      color: var(--theme-elevation-400);
      width: 15px;
      height: 15px;
    }

    .commitSha {
      font-family: var(--font-mono);
    }

    .commitMessage {
      text-overflow: ellipsis;
      overflow: hidden;
      white-space: nowrap;
    }
  }
}

.detail {
  max-width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
}

.domainLink {
  text-decoration: none;

  &:hover {
    text-decoration: underline;
  }
}

.textMask {
  text-overflow: ellipsis;
  overflow: hidden;

  a {
    display: flex;
    align-items: center;
  }

  span {
    white-space: nowrap;
    text-overflow: ellipsis;
    overflow: hidden;
  }

  .externalLinkIcon {
    flex-shrink: 0;
    margin-left: calc(var(--base) / 2);
  }
}

.statusDetail {
  display: flex;
  align-items: center;
  gap: calc(var(--base) * 0.5);

  .statusIndicator {
    border-radius: 100%;
    width: 10px;
    height: 10px;
    position: relative;

    &.status--offline {
      background-color: var(--theme-error-500);
    }

    &.status--online {
      background-color: var(--theme-success-500);
    }
  }
}

.consoleHeading {
  padding-top: calc(var(--base) * 2);
}

.console {
  code {
    background-color: unset;
    display: block;
  }
}

